added outside lights and organized light entities

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         <a-entity position="17 0 -9">
 
+            <!-- Outside Lights -->
             <a-entity light="color: #ffffff; distance: 5; intensity: 1.2; type: point" 
                     id="light_bulb" 
                     position="-21.37599 3.24911 2.845">
@@ -35,16 +36,21 @@
                     position="-15.87979 3.211 3.10997">
             </a-entity>
 
+            <a-entity light="type: point; color: #ffffff; distance: 5; intensity: 1.2" id="light_bulb-3" position="-5.07013 2.88454 5.592">
+            </a-entity>
+
+            <!-- Living room lights -->
             <a-entity light="type: point; color: #FAE9D5; distance: 8.07; intensity: 0.59" id="light_bulb-4" position="-6.48624 3.25 3.10644">
             </a-entity>
 
             <a-entity light="type: point; color: #FAE9D5; distance: 8.07; intensity: 0.8" id="light_bulb-5" position="-7.282 3.10181 -1.27598">
             </a-entity>
 
-            <a-entity light="type: point; color: #ffffff; distance: 5; intensity: 1.2" id="light_bulb-3" position="-5.07013 2.88454 5.592">
+            <a-entity light="type: point; color: #FAE9D5; distance: 10; intensity: 0.7" id="light_bulb-6" position="-5.227 4.06611 0.91956">
             </a-entity>
 
-            <a-entity light="type: point; color: #FAE9D5; distance: 10; intensity: 0.7" id="light_bulb-6" position="-5.227 4.06611 0.91956">
+            <!-- Garage light -->
+            <a-entity light="color: #ffffff; distance: 7.67; intensity: 2.29; type: point" id="light_bulb-garage" position="-18.59872 2.9697 -2.338">
             </a-entity>
 
             <a-entity id="model"
